apps/pantheon/paperless/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  parentRefs:
    - name: pantheon-gateway
      namespace: default
  hostnames:
    - paperless.pantheon.local
    - paperless.rm-it.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless
          port: 80
